<resources>
    <string name="app_name">Food Order</string>
    <string name="app_home_logo_description">Food Order Home Logo</string>
    <string name="app_mob_no">Mobile</string>
    <string name="app_user_name">Name</string>
    <string name="app_mail">Mail</string>
    <string name="app_password">Password</string>
    <string name="app_cnf_password">Confirm Password</string>
    <string name="app_login">Login</string>
    <string name="app_signup">SIGN UP</string>
    <string name="app_error_empty_mob_no">Please enter the mobile number.</string>
    <string name="app_error_empty_mail">Please enter the mail address.</string>
    <string name="app_error_empty_user_name">Please enter the user name.</string>
    <string name="app_error_empty_password">Please enter the password.</string>
    <string name="app_error_empty_confirm_password">Please enter the confirm password.</string>
    <string name="app_error_invalid_mob_no">Invalid mobile number. Mobile number should be 10 digits(Eg: 90428XXXXX)</string>
    <string name="app_error_invalid_mail">Invalid mail id.</string>
    <string name="app_error_invalid_password">Invalid password. Password should be of 6-10 digits with at-least one numeric and one special character.</string>
    <string name="app_error_invalid_password_mismatch">Password Mismatch.</string>
    <string name="search_location">Search location</string>
    <string name="current_location">Current Location</string>
    <string name="select_location">Select Location</string>
    <string name="search_restaurant">Search restaurant</string>
    <string name="select_restaurant">Select Restaurant</string>
    <string name="location_txt">Location..</string>
    <string name="rating">Rating</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="rapid_filters">RAPID FILTERS</string>
    <string name="cuisine">CUISINE</string>
    <string name="home">Home</string>
    <string name="basket">Basket</string>
    <string name="offer">Offers</string>
    <string name="account">Account</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="image">image</string>
    <string name="food_order">food_order</string>
    <string name="user_name">userName</string>
    <string name="location">location</string>
    <string name="restaurant">restaurant</string>
    <string name="add_filter_fragment">add_filter_fragment</string>
    <string name="change_password">Change Password</string>
    <string name="my_orders">My Orders</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="faq">FAQ</string>
    <string name="logout">Logout</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password_same_as_current_error">New Password is same as Current Password!!</string>
    <string name="yet_no_cards_saved">Yet no cards saved!!</string>
    <string name="yet_no_orders">Yet no food ordered!!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkout">Checkout</string>
    <string name="pay">PAY</string>
    <string name="credit_debit_card">Credit/Debit Card</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_month">Expiry Month</string>
    <string name="expiry_year">Expiry Year</string>
    <string name="cvv">CVV</string>
    <string name="payment_proceed">Proceed</string>
    <string name="wallet">Wallet</string>
    <string name="cod">COD</string>
    <string name="reorder">REORDER</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="sub_total">Sub Total</string>
    <string name="packing_charges">Packing Charges</string>
    <string name="tax_5_gst_cst">Tax 5%(GST/CST)</string>
    <string name="total">Total</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="grand_total">Grand Total</string>
    <string name="view_basket">View Basket</string>
    <string name="basket_is_empty">Basket is empty!!</string>
    <string name="flat_street_name">Flat/Street name</string>
    <string name="offer_applied_successfully">Offer applied successfully!!</string>
    <string name="apply">APPLY</string>
    <string name="enter_coupon_code">Enter coupon code</string>
    <string name="hotel_offer">Hotel offer</string>
    <string name="add_items">ADD ITEMS</string>
    <string name="date">Date</string>
    <string name="paid_via">PaidVia</string>
    <string name="add">ADD</string>
    <string name="rate_the_restaurant">Rate the restaurant</string>
</resources>
