<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    >

    <ImageView
        android:id="@+id/home_logo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:contentDescription="@string/app_home_logo_description"
        android:src="@drawable/food_order_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/logo_txt"
        android:layout_width="192dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_logo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mob_txt_input_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/logo_txt">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/mob_txt_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/app_mob_no"
            android:textSize="16sp"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_txt_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/mob_txt_input_layout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_txt_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="16sp"
            android:hint="@string/app_password"
            android:inputType="textPassword" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/password_error"
            android:textColor="#f90404"
            android:visibility="gone"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:text="@string/app_login"
        android:onClick="login"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/password_txt_input_layout" />

    <TextView
        android:id="@+id/signup_txt"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/app_signup"
        app:layout_constraintBaseline_toBaselineOf="@id/login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_txt_input_layout" />

</android.support.constraint.ConstraintLayout>