<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/home_logo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/app_home_logo_description"
            android:src="@drawable/food_order_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/logo_txt"
            android:layout_width="192dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_logo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/logo_txt">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/app_user_name"
                android:inputType="textPersonName"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_mob_no"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/signup_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mob_no_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/app_mob_no"
                android:inputType="number"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_mail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/signup_mob_no">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mail_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/app_mail"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@id/signup_mail"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_txt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/app_password"
                android:inputType="textPassword"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/password_error"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="start|center_vertical"
                android:textColor="#f90404"
                android:visibility="gone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@id/signup_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cnf_password_txt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/app_cnf_password"
                android:inputType="textPassword"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cnf_password_error"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="start|center_vertical"
                android:textColor="#f90404"
                android:visibility="gone" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:layout_marginBottom="48dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp"
            android:background="@color/colorAccent"
            android:onClick="signUp"
            android:text="@string/app_signup"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_confirm_password" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>