<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/account_details"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:background="@color/colorAccent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mobno"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center|top"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_details">

        <LinearLayout
            android:id="@+id/account_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/change_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/border_bottom"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/change_password"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/my_orders"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/border_bottom"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/my_orders"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/saved_cards"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/border_bottom"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/saved_cards"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/faq"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/border_bottom"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/faq"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/border_bottom"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/logout"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>