<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="288dp"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:weightSum="2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/border_rectangle">

        <TextView
            android:id="@+id/txt_cuisine"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="12dp"
            android:background="@color/colorAccent"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:text="@string/cuisine"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/list_cuisine"
            android:layout_width="match_parent"
            android:layout_height="288dp"
            android:layout_below="@id/txt_cuisine"
            android:paddingTop="12dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/border_rectangle">

        <TextView
            android:id="@+id/txt_rapid_filter"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="12dp"
            android:background="@color/colorAccent"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:text="@string/rapid_filters"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/list_rapid_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_rapid_filter"
            android:paddingTop="12dp" />

        <Button
            android:id="@+id/btn_apply_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_rapid_filter"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="@color/transparent"
            android:text="@string/apply_filter"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btn_clear_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_apply_filter"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="@color/transparent"
            android:text="@string/clear_filter"
            android:textColor="@color/colorAccent" />
    </RelativeLayout>


</LinearLayout>