<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BasketPaymentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/payment_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorAccent"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:title="Payment"
                app:titleTextColor="@color/white" />

            <TextView
                android:id="@+id/pay_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/payment_toolbar"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/pay"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/payment_progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="196dp"
                android:layout_height="24dp"
                android:layout_below="@id/pay_message"
                android:layout_centerInParent="true"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:indeterminateTint="@color/colorAccent"
                android:max="3"
                android:progress="1"
                android:progressTint="@color/colorAccent"
                android:visibility="gone" />


            <TextView
                android:id="@+id/payment_card"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/payment_progress_bar"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/border_bottom"
                android:drawableEnd="@drawable/ic_keyboard_arrow_down_black_24dp"
                android:gravity="center_vertical"
                android:text="@string/credit_debit_card"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/payment_saved_card_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/payment_card"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/card_details_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/payment_saved_card_list"
                android:background="@drawable/border_rectangle">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/card_holder_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/card_holder_name_txt"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:hint="@string/card_holder_name"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/card_number_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card_holder_name_input"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/card_number_txt"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:hint="@string/card_number"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/card_expiry_month_input"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/card_number_input"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/card_expiry_month_txt"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:hint="@string/expiry_month"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/card_expiry_year_input"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/card_number_input"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@id/card_expiry_month_input"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/card_year_txt"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:hint="@string/expiry_year"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/card_cvv_number_input"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/card_expiry_month_input"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/card_cvv_number_txt"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:hint="@string/cvv"
                        android:inputType="numberPassword" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/complete_payment"
                    android:layout_width="144dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/card_expiry_month_input"
                    android:layout_marginBottom="12dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_toEndOf="@id/card_cvv_number_input"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:text="@string/payment_proceed"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <TextView
                android:id="@+id/payment_wallet"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/card_details_layout"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/border_bottom"
                android:drawableEnd="@drawable/ic_keyboard_arrow_down_black_24dp"
                android:gravity="center_vertical"
                android:text="@string/wallet"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/payment_wallet_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/payment_wallet"
                android:background="@drawable/border_bottom"
                android:orientation="vertical"
                android:visibility="gone">

            </ListView>

            <TextView
                android:id="@+id/payment_cod"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/payment_wallet_list"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/border_bottom"
                android:gravity="center_vertical"
                android:text="@string/cod"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>